# financial-research-agent

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: config.py
src/agents/: email_sender.py  report_generator.py  search_planner.py  web_searcher.py
src/core/: base_agent.py  base_runner.py  logging_config.py  pipeline.py
src/core/factory/: llm_factory.py
src/models/: report_data.py  research_context.py  search_planner.py
src/prompts/: email_sender.py  report_generator.py  search_planner.py  web_searcher.py
src/runners/: email_sender.py  report_generator.py  search_planner.py  web_searcher.py
src/services/: report_manager.py
src/services/tasks/: base.py  email_sender.py  report_generator.py  search_planner.py  web_searcher.py
src/tools/: email_sender.py  web_searcher.py
tests/: test_main.py
tests/agents/: test_email_sender_agent.py  test_report_generator_agent.py  test_search_planner_agent.py  test_web_searcher_agent.py
tests/core/: test_base_agent.py  test_base_runner.py  test_logging_config.py  test_pipeline.py
tests/core/factory/: test_llm_factory.py
tests/models/: test_report_data.py  test_research_context.py  test_search_planner_model.py
tests/prompts/: test_prompts.py
tests/runners/: test_email_sender_runner.py  test_report_generator_runner.py  test_search_planner_runner.py  test_web_searcher_runner_detailed.py
tests/services/: test_report_manager.py
tests/services/tasks/: test_base_task.py  (+4 more)
tests/tools/: test_email_sender_tool.py  test_web_searcher_tool.py
