[project]
name = "financial-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.8.0",
    "langchain-community>=0.4.1",
    "openai>=2.24.0",
    "openai-agents>=0.10.2",
    "pydantic>=2.12.5",
    "sendgrid>=6.12.5",
]
