[project]
name = "financial-research-agent"
version = "0.1.0"
description = "Financial research agent using agentic pipelines"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "python-dotenv>=1.0.1",
    "email-validator>=2.3.0",
    "gradio>=4.0.0",
    "langchain-community>=0.0.1",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "sendgrid>=6.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 130

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]